--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "echarts": "^6.0.0",
     "element-ui": "^2.15.14",
     "mitt": "^3.0.1",
     "vue": "^2.6.14",
