--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue-office/docx": "^1.6.3",
+    "@vue-office/excel": "^1.7.14",
+    "@vue-office/pdf": "^2.0.10",
+    "@vue-office/pptx": "^1.0.1",
     "core-js": "^3.8.3",
     "echarts": "^6.0.0",
     "element-ui": "^2.15.14",
     "mitt": "^3.0.1",
     "vue": "^2.6.14",
+    "vue-demi": "^0.14.6",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
