--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "echarts": "^6.0.0",
     "element-ui": "^2.15.14",
+    "frappe-gantt": "^0.5.0",
     "mitt": "^3.0.1",
     "vue": "^2.6.14",
     "vue-demi": "^0.14.6",
