--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue-office/excel": "^1.7.14",
     "@vue-office/pdf": "^2.0.10",
     "@vue-office/pptx": "^1.0.1",
+    "@wanglin1994/simple-flow-chart": "0.0.4",
     "core-js": "^3.8.3",
     "echarts": "^6.0.0",
     "element-ui": "^2.15.14",
@@ -26,6 +27,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "less": "^4.4.0",
+    "less-loader": "^12.3.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^16.0.5",
     "vue-template-compiler": "^2.6.14"
